--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,7 +16,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    opacity: 90%;
 }
 
 header img {
@@ -95,6 +95,26 @@ header img {
     /*transform: scaleY(-1); /* Flip the wave vertically */
 }
 
+.wave-shape-contact2 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 140px; /* Adjust the height of the wave */
+    background: url('../svg/wave.svg') repeat-x; /* Replace 'wave.svg' with the path to your wave SVG file */
+    transform: scaleY(-1); /* Flip the wave vertically */
+}
+
+.wave-shape-footer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 250px; /* Adjust the height of the wave */
+    background: url('../svg/wave.svg') repeat-x; /* Replace 'wave.svg' with the path to your wave SVG file */
+    /*transform: scaleY(-1); /* Flip the wave vertically */
+}
+
 input[type=submit] {
     background-color: #b3fc64; /* Set your desired background color */
     color: rgb(0, 0, 0);
@@ -111,7 +131,7 @@ input[type=submit]:hover {
 
 nav {
     display: flex;
-    padding-right: 27%;
+    padding-left: 10%;
 }
 
 nav a {
@@ -125,6 +145,16 @@ nav a {
 nav a:hover {
     background-color: #b3fc64;
     color: black;
+}
+
+.callus {
+    text-align: right;
+}
+
+.callus p {
+    font-weight: 900;
+    font-size: large;
+    color: #45a049;
 }
 
 .dropdown {
@@ -217,10 +247,26 @@ section {
     margin-bottom: 20px;
 }
 
+.news-item-only {
+    display: flex;
+    margin-bottom: 20px;
+}
+
 .news-item img {
-    width: 100%;
-    height: auto;
+    width: 500px;
+    height: 400px;
     border-radius: 25px;
+    object-fit: cover;
+}
+
+.news-item-only img {
+    border-radius: 25px;
+    margin-right: 15px;
+}
+
+.news-content {
+    flex: 1; /* Take up the remaining space */
+    text-align: left;
 }
 
 .featured-section {
@@ -253,11 +299,13 @@ section {
     background: linear-gradient(45deg, #85FF00 0%, #EEEDDC 65%); /* Set your desired colors */
     position: relative;
     padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .contact-text {
     margin-right: 10%;
     margin-left: 20%;
+    text-align: left;
 } 
 
 iframe {
@@ -265,4 +313,60 @@ iframe {
     height: 400px;
     border: 0;
     border-radius: 25px;
+}
+
+footer {
+    background: linear-gradient(45deg, #EEEDDC 20%, #85FF00 100%);
+    color: #000000;
+    padding: 20px 0;
+    position: relative;
+    padding-top: 150px;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-section {
+    flex: 1;
+    margin-left: 100px;
+}
+
+.footer-section-img {
+    flex: 1;
+    margin-left: 100px;
+}
+
+.footer-section-img img {
+    max-width: 100%;
+    max-height: 150px;
+    display: block;
+    margin: 0 auto;
+}
+
+.footer-section h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.footer-section p {
+    margin: 0;
+}
+
+.footer-section a {
+    display: block;
+    color: #000000;
+    text-decoration: none;
+    margin-bottom: 5px;
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.footer-bottom p {
+    margin-top: 50px;
 }
