New section added

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -252,6 +252,12 @@ section {
     position: relative;
 }
 
+.media {
+    display: flex;
+    align-items: center;
+    color: rgb(0, 0, 0);
+}
+
 .news-item {
     width: 30%;
     margin-bottom: 20px;
@@ -278,6 +284,35 @@ section {
 .news-content {
     flex: 1; /* Take up the remaining space */
     text-align: left;
+}
+
+.why-content {
+    flex: 1; /* Take up the remaining space */
+    text-align: left;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
+.media-content {
+    display: flex;
+    align-items: center;    
+}
+
+.media-content img{
+    max-width: 150px;
+    margin-right: 50px;
+    margin-left: 500px;
+    border-radius: 25px;  
+}
+
+.media-content p{
+    margin-right: 50px;
+}
+
+.media-content a {
+    text-decoration: none;
+    background-color: none;
+    color: black; 
 }
 
 .menago-content {
@@ -350,7 +385,7 @@ footer {
     color: #000000;
     padding: 20px 0;
     position: relative;
-    padding-top: 150px;
+    padding-top: 250px;
 }
 
 .footer-content {
